Listing avaliable robots in HTML. Slight refactor of game-loop

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 	</title>
 </head>
 <body onload="OnLoad()">
+	<H1>
+		AI Robot Wars
+	</H1>
+	<H3>
+		Arena
+	</H3>
 	<canvas id="myCanvas" width="500" height="500" style="border:1px solid"></canvas><br>
+
+	<H3>
+		Avaliable Robots
+	</H3>
+	<div id="robotlist"> </div>
 </body>
 </html>
