Adding fast-run mode

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<H1>
 		AI Robot Wars
 	</H1>
-	RUN<input type="checkbox" checked="true" onclick="OnCheckRun();" id="autorun"></input><br>
+	RUN<input type="checkbox" checked onclick="OnCheckRun();" id="autorun"></input> Extra fast <input type="checkbox" id="fastrun"></input><br>
 	<button type="button" onclick="OnStep(1);">Step 1</button><br>
 	<button type="button" onclick="OnStep(20);">Step 20</button><br>
 	<H3>
